force-app/main/default/objects/OrderItem/fields/Account_Products__c.field-meta.xml
<CustomField>
    <fullName>Account_Products__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Products</label>
    <referenceTo>DRC_NBC_Restricted_Product__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>