force-app/main/default/objects/OrderItem/fields/DRC_NBC_Customer_item_Refrence__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Customer_item_Refrence__c</fullName>
    <label>Customer item Refrence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>