force-app/main/default/objects/OrderItem/fields/DRC_NBC_Discount__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Discount__c</fullName>
    <label>Discount</label>
    <precision>8</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>