force-app/main/default/objects/OrderItem/fields/DRC_NBC_Hazardous__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Hazardous__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hazardous</label>
    <type>Checkbox</type>
</CustomField>