force-app/main/default/objects/OrderItem/fields/DRC_NBC_Item_GST__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Item_GST__c</fullName>
    <formula>DRC_NBC_Total_Price__c * 0.18</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item GST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>