force-app/main/default/objects/OrderItem/fields/DRC_NBC_Packing_Quantity__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Packing_Quantity__c</fullName>
    <label>Packing Quantity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>