force-app/main/default/objects/OrderItem/fields/DRC_NBC_Packing_Size__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Packing_Size__c</fullName>
    <label>Packing Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>