force-app/main/default/objects/OrderItem/fields/DRC_NBC_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Total_Price__c</fullName>
    <formula>IF(
				NOT(ISNULL(DRC_NBC_Discount__c)) ,
			 UnitPrice * Quantity * ( 100 - DRC_NBC_Discount__c)* 0.01,
				UnitPrice * Quantity
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>