force-app/main/default/objects/OrderItem/fields/DRC_NBC_Unit_Of_Measurement__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Unit_Of_Measurement__c</fullName>
    <label>Unit Of Measurement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KGS</fullName>
            </value>
            <value>
                <fullName>Pounds</fullName>
                <isActive>false</isActive>
                <label>Pounds</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>