force-app/main/default/objects/OrderItem/fields/DRC_NBC_Update_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Update_Sales_Price__c</fullName>
    <label>Update Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>